src/main/resources/assets/styles/_table.scss
.part-table {
  .download-table-container {
    display: flex;
    margin-top: $spacer * 2;
    margin-bottom: $spacer * 2;

    label {
      display: none;
    }

    @include media-breakpoint-up(lg) {
      justify-content: flex-end;
    }

    @include media-breakpoint-down(md) {
      margin-top: $spacer * 2;
      margin-bottom: $spacer * 2;
    }

    .ssb-dropdown {
      @include media-breakpoint-down(md) {
        width: 100%;
      }
    }
  }

  .source {
    margin-bottom: $spacer;

    .source-title {
      color: $ssb-dark-6;
    }

    & > div {
      padding-top: $spacer * 0.5;
      padding-bottom: $spacer * 0.5;
    }

    & a {
      margin-top: 10px;
    }
  }

  @include media-breakpoint-down(md) {
    width: 95%;
    margin: 0;

    .source>div {
      padding: 0;
    }
  }

  .ssb-link {
    margin-top: 10px;
  }
}

table.statistics {
  width: 100%;

  caption {
    caption-side: top;
    color: $ssb-dark-6;
  }

  thead,
  tbody {

    th.level1 {
      padding-left: 1.75em;
    }

    th.level2 {
      padding-left: 2.50em;
    }

    th.level3 {
      padding-left: 3.25em;
    }

    th.sum,
    td.sum {
      font-weight: bold;
    }

    td.preliminary:before {
      content: "*";
    }
  }

  tbody {

    th,
    td {
      height: 36px;
    }

    th {
      &:first-child {
        text-align: left;
      }

      &.colspan {
        text-align: left;
        font-weight: bold;
      }

      &:last-child {
        border-right: none;
      }

      &.title {
        font-weight: bold;
        font-size: 1.1em;
      }
    }
  }

  thead,
  tbody tr.head {
    th {
      &[colspan] {
        text-align: center;
      }
    }
  }
}

table.statistics tbody tr td:not(:first-child) {
  text-align: right;
}

table.statistics thead tr:last-child th {
  text-align: right;
}

table.statistics {
  thead {
    th[scope="colgroup"] {
      text-align: right;
    }
  }
}

ul.statbankkilde {
  padding-left: 1em;
  font-size: 1.3em;
  list-style-type: none;

  li {
    margin-bottom: 0.4em;
  }
}

